tests/paczka1/small_fuzzy/93255335.err
Error in line 2: A660 A0 24,3
Error in line 4: A660 A0 46,0
Error in line 7: A660 A0 45,9
Error in line 5: A660 A333 41,6
Error in line 16: Tjo7f9PQ A0 83,2
